feat: almost 100% swagger
